fixed disaligned button: added display: flex to css

--- a/app/static/dashboard/style.css
+++ b/app/static/dashboard/style.css
@@ -49,7 +49,7 @@ div {
     color: white;
     border: none;
     border-radius: 0.5rem;
-    cursor: pointer;
+    display: flex;
 }
 
 #icon {
